k8slearn/10.Kubernetes 日志/10.4.Loki/Manifest/1.Loki 日志收集系统/lokiDashboard-ingress.yaml
# lokiDashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-dashboard
  namespace: logging
spec:
  ingressClassName: nginx
  rules:
    - host: loki.qikqiak.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-grafana
                port:
                  number: 80
